[package]
name = "big-band-mgr-jj"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
eframe = { version = "0.32.1", features = ["persistence"] }
egui_dnd = "0.13.0"
egui_extras = { version = "0.32.1", features = ["image", "default"] }
egui_path_picker = "0.2.0"
itertools = "0.14.0"
serde = "1.0.228"
serde_json = "1.0.149"
