[package]
name = "big_band_chart_manager"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
eframe = { version = "0.32.1", features = ["persistence"] }
egui_autocomplete = { version = "11.0.0", features = ["serde"] }
egui_dnd = "0.13.0"
egui_extras = { version = "0.32.1", features = ["image", "default"] }
egui_path_picker = "0.2.0"
futures = "0.3.32"
itertools = "0.14.0"
pdfcat = "1.0.0-beta.9"
rfd = "0.17.2"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.52.1"
